<resources>
    <string name="app_name">Weather</string>


    <string name="rain">Rainy</string>
    <string name="part_cloud">Partly Cloudly</string>
    <string name="storm">Stormy</string>
    <string name="wind">Windy</string>
    <string name="sun">Sunny</string>
    <string name="cloud">Cloudly</string>

    <string name="city">City</string>
    <string name="uofm">Unit Measurement</string>
    <string name="iom">imperOrMetric</string>

    <string name="c">-- °C</string>
    <string name="C">°C</string>
    <string name="f">-- °F</string>
    <string name="F">°F</string>
    <string name="c.f">°C/°F</string>

    <string name="mph">Miles/Hour</string>
    <string name="kmh">Kilometers/Hour</string>
    <string name="m.k">Kilometers or Miles</string>

    <string name="hPa">HectoPascal</string>
    <string name="mmOfHg">mm of Hg</string>


    <string name="today">Today • </string>
    <string name="tomorrow">Tomorrow • </string>
    <string name="monday">Monday • </string>
    <string name="tuesday">Tuesday • </string>
    <string name="wednesday">Wednesday • </string>
    <string name="thursday">Thursday • </string>
    <string name="friday">Friday • </string>
    <string name="saturday">Saturday • </string>
    <string name="sunday">Sunday • </string>
    <string name="title_activity_settings">settings</string>

    <string name="weather_tomorrow">Weather for tomorrow</string>
    <string name="weather_today">Weather for today</string>
    <string name="weather2day">Weather for 2 days after</string>
    <string name="temperature">Temperature</string>
    <string name="set_city">Set City</string>

    <string name="choose_city">Choose City</string>
    <string name="loading">Loading</string>
    <!-- Preference Titles -->
    <string name="unit">Unit</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>